refactor read routine to handle full 100ms potential delay. now second read is failing; perhaps we do need a better strategy for select/deselecting the card

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/natevw/tessel-sdcard/issues"
   },
-  "homepage": "https://github.com/natevw/tessel-sdcard"
+  "homepage": "https://github.com/natevw/tessel-sdcard",
+  "devDependencies": {
+    "queue-async": "^1.0.7"
+  }
 }
