--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/natevw/tessel-sdcard",
   "devDependencies": {
     "queue-async": "^1.0.7"
+  },
+  "dependencies": {
+    "fifolock": "^1.0.0"
   }
 }
