--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "url": "https://github.com/natevw/tessel-sdcard/issues"
   },
   "homepage": "https://github.com/natevw/tessel-sdcard",
-  "devDependencies": {
-    "queue-async": "^1.0.7"
-  },
   "dependencies": {
-    "fifolock": "^1.0.0"
+    "fifolock": "^1.0.0",
+    "fatfs": "^0.4.0",
+    "parsetition": "^0.1.0",
+    "queue-async": "^1.0.7"
   }
 }
