--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tessel SD module driver",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tinytap -e 'tessel run {} ${SDCARD_PORT}' test/*.js"
   },
   "repository": {
     "type": "git",
