--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "queue-async": "^1.0.7",
     "xok": "^1.0.0"
   },
-  "devDependencies" : {
-    "tinytap" : "~0.2.0"
+  "devDependencies": {
+    "tinytap": "^0.2.1"
   }
 }
